--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   web:
-    image: sybozz/vite-react-app
+    image: sybozz/vite-react-app:latest
     ports:
       - "9097:80"
     restart: unless-stopped
