--- a/k8s-ingress.yaml
+++ b/k8s-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: vite-react-demo-ingress
+  name: vite-react-app-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -13,6 +13,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: vite-react-demo-service
+            name: vite-react-app-service
             port:
               number: 80
